--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "version": "0.0.0",
   "name": "rc2aureliatypscriptapp",
   "devDependencies": {
+    "aurelia-bundler": "^0.4.0",
+    "del": "^2.2.0",
     "gulp": "^3.9.1",
     "gulp-changed": "^1.3.0",
     "gulp-plumber": "^1.1.0",
@@ -9,8 +11,10 @@
     "gulp-typescript": "^2.13.5",
     "jspm": "^0.16.35",
     "require-dir": "^0.3.0",
+    "run-sequence": "^1.2.1",
     "tsd": "^0.6.5",
-    "typescript": "^1.8.10"
+    "typescript": "^1.8.10",
+    "vinyl-paths": "^2.1.0"
   },
   "jspm": {
     "directories": {
@@ -27,7 +31,8 @@
       "aurelia-templating-resources": "npm:aurelia-templating-resources@^1.0.0-beta.1.2.6",
       "aurelia-templating-router": "npm:aurelia-templating-router@^1.0.0-beta.1.2.1",
       "bootstrap": "github:twbs/bootstrap@^3.3.6",
-      "font-awesome": "npm:font-awesome@^4.6.3"
+      "font-awesome": "npm:font-awesome@^4.6.3",
+      "text": "github:systemjs/plugin-text@^0.0.8"
     },
     "devDependencies": {}
   }
